--- a/src/Components/sidebar.css
+++ b/src/Components/sidebar.css
@@ -17,7 +17,7 @@
 }
 
 .navbar {
-  width: 20%;
+  width: 25%;
   display: flex;
   justify-content: space-evenly;
   padding: 5px 0;
@@ -25,8 +25,8 @@
   border-radius: 2rem;
   position: relative;
 }
-.navbar ul {
-  display: inline-flex;
+.links{
+  display: flex;
   list-style: none;
   gap: 5rem;
 }
