--- a/src/Pages/steps.css
+++ b/src/Pages/steps.css
@@ -1,265 +1,64 @@
-:root{
-   --heading-h1: clamp(2.6rem, 2.2cqi, 2.8rem);
-   --heading-h4: clamp(1.6rem, 2cqi, 2rem);
-   --text-normal: clamp(1.2rem, 1.2cqi, 1.6rem);
-   --border-1:  1px solid rgba(255, 255, 255, 0.2);
-   --font-family-p:  "DM Sans", sans-serif;
-   --font-weight-h1: 700;
-   --font-weight-h2: 600;
-   --font-weight-h3: 500;
-   --font-weight-h4: 400;
-
-
+:root {
+  --heading-h1: clamp(2.6rem, 2.2cqi, 2.8rem);
+  --heading-h4: clamp(1.6rem, 2cqi, 2rem);
+  --text-normal: clamp(1.2rem, 1.2cqi, 1.6rem);
+  --border-1: 1px solid rgba(255, 255, 255, 0.1);
+  --border-radius: 1rem;
+  --font-family-p: "DM Sans", sans-serif;
+  --font-weight-h1: 700;
+  --font-weight-h2: 600;
+  --font-weight-h3: 500;
+  --font-weight-h4: 400;
+  --bg-secondary: rgba(255, 255, 255, 0.1);
 }
-
-
-
-
-
-
-
-
-
-
 
 .container {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
-  display: flex;
   align-items: center;
-  gap: 2rem;
-}
-
-.project-scope {
-  width: calc(80% / 2);
-  height: 70vh;
-  background-color: transparent;
-  border: var(--border-1);
-  border-radius: 1rem;
-  position: relative;
-  overflow: hidden;
-}
-.heading-1 {
-    margin-top: 10px;
-  padding: 1rem;
-  text-align: left;
-}
-
-.heading-1 h4 {
-  font-size: var(--text-normal);
-}
-.heading-2 {
-  padding: 0 1rem;
-}
-
-.heading-2 h1 {
-  font-size: var(--heading-h1);
-  font-family: var(--font-family-p);
-  font-weight: 400;
-}
-.decription {
-  width: 300px;
-  height: 100px;
-  flex-wrap: wrap;
-  padding: 1rem;
-}
-.decription p {
-  font-size: var(--text-normal);
-  word-spacing: normal;
-  word-break: break-all;
-}
-
-.mockup-card-grid {
-  display: grid;
-  grid-template-areas:
-    "main main main main"
-    "left right right right";
-  grid-auto-rows: auto;
-  grid-auto-columns: auto;
-  width: calc(80% / 2);
-  gap: 0;
-  width: 100%;
-  border-radius: 10px;
-  border: var(--border-1);
-  position: absolute;
-  left: 15%;
-  top: 38%;
-}
-.mockup-btns {
-  width: 100%;
-  grid-area: main;
-  background-color: transparent;
-  border-radius: 5px;
-  border-bottom: var(--border-1);
-  padding: 5px;
-}
-.mockup-btns i {
-  font-size: 1.5rem;
-  padding: 5px;
-  color: blue;
-}
-.mockup-sidebar {
-  width: 150px;
-  height: 40vh;
-  justify-content: center;
-  text-align: center;
-  grid-area: left;
-  border-radius: 10px;
-  padding: 0 5px;
-  border: var(--border-1);
-  background-color: rgba(255, 255, 255, 0.1);
-}
-.sidebar-icon {
-  font-size: clamp(2.2rem, 2cqi, 2.5rem);
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  background-color: transparent;
-  margin: 1rem 0;
-  padding: 0.5rem;
-}
-.sidebar-icon i {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-.sidebar-nav {
-  width: 100%;
-  height: auto;
-  background-color: transparent;
-  margin-top: 5rem;
-}
-.navbar-icons {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  gap: 1rem;
-  font-size: clamp(2.2rem, 2cqi, 2.5rem);
-  background-color: transparent;
-  padding: 1rem;
-}
-.navbar-icon {
-  width: 100%;
-  display: flex;
+  margin-bottom: 2rem;
+   display: flex;
+  flex-direction: column; 
   align-items: center;
-  text-align: left;
-  border-radius: 4px;
-  color: #fff;
-  background-color: transparent;
-  margin-bottom: 1rem;
-}
-.navbar-icon i {
-  color: #fff;
-  font-size: clamp(1rem, 1.2cqi, 1.5rem);
-  background-color: transparent;
-  margin-right: 10px;
-}
-.navbar-icon span {
-  color: #fff;
-  font-size: clamp(1.2rem, 1cqi, 1.5rem);
-  background-color: transparent;
-  margin-left: 5px;
 }
 
-.mockup-list {
-  width: 100%;
-  background-color: transparent;
-  border-radius: 10px;
-  grid-area: right;
-  font-size: 2rem;
-  display: grid;
-  grid-template-areas:
-    "row row row "
-    "row2  row2 row2"
-    "row3 row3 row3"
-    "row4 row4 row4";
-  gap: 1rem;
-}
-
-/*  Mockup list grid        */
-.mockup-list-row-1 {
-  grid-area: row;
-  width: 100%;
-  height: 50px;
-  padding: 0.5rem;
-  color: #fff;
-  border: var(--border-1);
-  font-size: clamp(2.2rem, 2cqi, 2.5rem);
-}
-.mockup-list-row-1 span {
-  margin-left: 10px;
-}
-
-.mockup-list-row-2 {
-  grid-area: row2;
-  width: 100%;
-  height: 50px;
-  padding: 0.5rem;
-  color: #fff;
-  border: var(--border-1);
-  font-size: clamp(2.2rem, 2cqi, 2.5rem);
-}
-.mockup-list-row-2 span {
-  margin-left: 10px;
-}
-.mockup-list-row-3 {
-  grid-area: row3;
-  width: 100%;
-  height: 50px;
-  padding: 0.5rem;
-  color: #fff;
-  border: var(--border-1);
-  font-size: clamp(2.2rem, 2cqi, 2.5rem);
-}
-.mockup-list-row-3 span {
-  margin-left: 10px;
-}
-.mockup-list-row-4 {
-  grid-area: row4;
-  width: 100%;
-  height: 50px;
-  padding: 0.5rem;
-  color: #fff;
-  border: var(--border-1);
-  font-size: clamp(2.2rem, 2cqi, 2.5rem);
-}
-.mockup-list-row-4 span {
-  margin-left: 10px;
-}
 /* Animations for List Grid  */
 
-
-
-
-
-
-
-
+.b {
+  grid-area: left;
+  width: 100%;
+  height: 100vh;
+  background-color: transparent;
+}
 
 .c {
   grid-area: main;
+  width: 100%;
+  height: 60vh;
+  background-color: transparent;
 }
 .d {
   grid-area: right;
+  width: 100%;
+  height: 60vh;
+  background-color: transparent;
 }
 .e {
   grid-area: footer;
+  width: 100%;
+  height: 40vh;
+  background-color: transparent;
 }
 
 .features-grid {
   display: grid;
   grid-template-areas:
-    "menu main main main right right"
-    "menu footer footer footer footer footer";
-  grid-auto-rows: 50px;
-  grid-auto-columns: 50px;
+    "left left main main right right"
+    "left left footer footer footer footer";
+  grid-auto-rows: auto;
+  grid-auto-columns: auto;
+  width: calc(80%);
+  height: 90vh;
   gap: 1rem;
-  width: calc(80% / 2);
-  height: 50vh;
-  padding: 20px;
-}
-
-.features-grid > div {
-  background-color: #fff;
-  font-size: 5rem;
-  color: black;
+  padding: 1rem;
 }
