--- a/src/Components/ideacard.css
+++ b/src/Components/ideacard.css
@@ -22,7 +22,7 @@
 
 .project-scope {
   width: 100%;
-  height: 90vh;
+  height: 100%;
   background-color: transparent;
   border: var(--border-1);
   border-radius: 1rem;
