--- a/src/Components/techicons.css
+++ b/src/Components/techicons.css
@@ -25,21 +25,24 @@
 
 .container-techicons {
   width: 100%;
+  height: 100%;
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 1rem;
+  overflow: hidden;
   position: relative;
   background-color: transparent;
-  overflow: hidden;
-  border: var(--border-1);
-  border-radius: var(--border-radius);
-  padding: 1rem 0
+  padding: 1rem 
 }
 .techicons-head{
-  width: 50%;
+  width: 100%;
+  height: 100%;
   padding: 1rem 0;
 }
 .techicons-wrapper {
-  width: 50%;
+  width: 100%;
+  height: 100%;
 }
 
 .icons {
@@ -56,8 +59,8 @@
   color: var(--font-color-blue);
   background-color: transparent;
   position: absolute;
-  top: -110%;
-  left: 35%;
+  top: -80%;
+  left: 25%;
 }
 .react i{
   color: var(--font-color-blue);
@@ -79,14 +82,14 @@
   color: var(--font-color-blue);
   color: var(--font-color-red);
   position: absolute;
-  top: -120%;
-  right: -30%;
+  top: -100%;
+  right: -40%;
 }
 .github i {
   color: var(--font-color-red);
   font-size: var(--heading-h1);
   position: absolute;
-  top: 55%;
+  top: 65%;
   right: 65%;
   animation: rotate 5s infinite linear;
 }
@@ -100,14 +103,14 @@
   color: var(--yellow-icon);
   background-color: transparent;
   position: absolute;
-  bottom: -110%;
-  right: 18%;
+  bottom: -90%;
+  right: 10%;
 }
 .javascript i{
   color: var(--yellow-icon);
   font-size: var(--heading-h1);
   position: absolute;
-  left: 30%;
+  left: 45%;
   bottom: 75%;
   animation: pulse 1s infinite ease-in-out alternate;
 }
