--- a/src/Pages/steps.css
+++ b/src/Pages/steps.css
@@ -26,28 +26,37 @@
 
 .b {
   grid-area: left;
-  width: 100%;
-  height: 100vh;
+  width: calc(100%);
+  height: 100%;
   background-color: transparent;
+  border: var(--border-1);
+  border-radius: var(--border-radius);
 }
 
 .c {
   grid-area: main;
-  width: 100%;
-  height: 60vh;
+  width: calc(100%);
+  height: 100%;
   background-color: transparent;
+  border: var(--border-1);
+  border-radius: var(--border-radius);
 }
 .d {
   grid-area: right;
-  width: 100%;
-  height: 60vh;
+  width: calc(100%);
+  height: 100%;
   background-color: transparent;
+  border: var(--border-1);
+  border-radius: var(--border-radius);
 }
 .e {
   grid-area: footer;
-  width: 100%;
-  height: 40vh;
+  width: calc(100%);
+  height: 70%;
   background-color: transparent;
+  border: var(--border-1);
+  border-radius: var(--border-radius);
+  margin-top: 7rem;
 }
 
 .features-grid {
@@ -55,10 +64,11 @@
   grid-template-areas:
     "left left main main right right"
     "left left footer footer footer footer";
-  grid-auto-rows: auto;
-  grid-auto-columns: auto;
-  width: calc(80%);
-  height: 90vh;
+  grid-auto-rows: calc(250px);
+  grid-auto-columns: calc(150px);
+  width: calc(100%);
+  height: 100vh;
   gap: 1rem;
-  padding: 1rem;
+  margin: auto;
+  padding: 5rem;
 }
